# sundayedit

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CALIBRATION.md  DECISIONS.md  DISTRIBUTION.md  NEEDS-RICHARD.md  SESSION-PROGRESS-2026-06-03.md  SMOKE-TEST.md  calibration-dataset.json  calibration-real.json  calibration-sample.json  integration.md
scripts/: fetch-ffmpeg.mjs
site/: README.md  index.html  main.js  styles.css
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/cmake/: ggml-ci-portable.cmake
src-tauri/examples/: calibrate.rs  calibration_dataset.rs
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  model.rs
src-tauri/src/commands/: asr.rs  cleanup.rs  clips.rs  compose.rs  deeplink.rs  diarize.rs  export.rs  glossary.rs  highlight_reel.rs  mod.rs  operations.rs  polish.rs  project.rs  reflow.rs  render.rs  secrets.rs  style.rs  suggest.rs  timeline_ops.rs  translate.rs
src-tauri/src/services/: burnin.rs  compose.rs  deeplink.rs  diarize.rs  document.rs  export.rs  export_presets.rs  filler.rs  find_replace.rs  glossary.rs  highlight_reel.rs  mod.rs  operations.rs  project_file.rs  reflow.rs  secrets.rs  style_presets.rs  timeline_ops.rs  video.rs  waveform.rs
src-tauri/src/services/asr/: calibration.rs  captionize.rs  cloud.rs  confidence.rs  download.rs  local.rs  mod.rs  model.rs
src-tauri/src/services/llm/: clips.rs  glossary_suggest.rs  mod.rs  polish.rs  suggest.rs  translate.rs
src-tauri/tests/: operations_stress.rs
src/components/: CommandPalette.tsx  Modal.tsx  Waveform.tsx
src/features/cleanup/: CleanupPanel.test.tsx  CleanupPanel.tsx
src/features/clips/: ClipsPanel.tsx
src/features/context/: ContextPanel.tsx
src/features/editor/: CaptionEditor.bulk.test.tsx  CaptionEditor.tsx  selection.test.ts  selection.ts
src/features/export/: BurnInPreview.test.tsx  BurnInPreview.tsx  ComposeExport.tsx  ExportConfigPanel.tsx  ExportPanel.tsx  burnInPreview.helpers.ts  exportConfig.test.ts
src/features/media/: MediaBin.tsx
src/features/onboarding/: Onboarding.tsx
src/features/polish/: PolishPanel.tsx
src/features/project/: ImportScreen.tsx  ProjectMetaPanel.tsx  deepLinkImport.test.ts  deepLinkImport.ts
src/features/reflow/: ReflowPanel.tsx
src/features/settings/: SettingsPanel.tsx
src/features/speakers/: SpeakersPanel.tsx
src/features/style/: StyleEditor.tsx
src/features/suggest/: SuggestPanel.tsx
src/features/timeline/: ClipInspector.tsx  MediaPlayer.test.tsx  MediaPlayer.tsx  Timeline.tsx  geometry.test.ts  geometry.ts  laneLayout.test.ts  laneLayout.ts  mediaSync.test.ts  mediaSync.ts  previewMap.test.ts  previewMap.ts
src/features/transcribe/: CloudPanel.tsx  LocalPanel.tsx  ModelPicker.tsx  asrOptions.test.ts  asrOptions.ts
src/features/translate/: TranslatePanel.tsx
src/lib/: cn.test.ts  composeEngine.ts  confidenceTier.test.ts  cost.test.ts  cost.ts  i18n.test.ts  i18n.ts  ipc.contract.test.ts  ipc.test.ts  ipc.ts  sampleProject.ts  styleToCss.test.ts  styleToCss.ts  updater.ts  useEditorHistory.ts  useProjectStore.test.ts  useProjectStore.ts  useVideoImport.ts
src/lib/bindings/: AlternateRead.ts  AnimationSpec.ts  Aspect.ts  AsrOptions.ts  BurnInOptions.ts  Caption.ts  ClaudeModel.ts  Clip.ts  ClipPlan.ts  CloudCostEstimate.ts  CloudProvider.ts  CloudProviderInfo.ts  ComposeProgress.ts  ComposeSettings.ts  CropRect.ts  DownloadProgress.ts  Effect.ts  Encoder.ts  ExportConfig.ts  ExportPreset.ts  ExportWarning.ts  ExtractedDocument.ts  FillerHit.ts  FindMatch.ts  FindOptions.ts  GlossaryApplyResult.ts  GlossaryCorrection.ts  GlossaryTerm.ts  ImportRequest.ts  LengthWarning.ts  MediaItem.ts  MediaKind.ts  Peak.ts  PolishChange.ts  PolishEstimate.ts  PolishResult.ts  Project.ts  ProjectMeta.ts  ReelRenderProgress.ts  ReelRenderResult.ts  (+36 more)
src/styles/: globals.css  tokens.css
tests/e2e/: compose-export.spec.ts  editor-workflow.spec.ts  export-workflow.spec.ts  onboarding.spec.ts  smoke.spec.ts  timeline-nle.spec.ts  timeline-operations.spec.ts
tests/e2e/fixtures/: expected-export.ass  expected-export.srt  expected-export.vtt  mock-backend.ts
