[package]
name = "verbatim"
version = "0.1.0"
description = "Verbatim — AI-assisted video captioning for desktop"
authors = ["Richard Fossland"]
edition = "2021"

[lib]
name = "verbatim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data layer
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase 1 — video import + waveform
sha2 = "0.10"      # content hashing for path-stability relink
hound = "3.5"      # WAV reader for waveform peak computation

# Phase 7 — find & replace (regex search in captions)
regex = "1"

# Type generation for the frontend
ts-rs = { version = "11", features = ["serde-compat", "chrono-impl", "uuid-impl"] }
tauri-plugin-dialog = "2.7.1"

# Phase 2 — local Whisper (optional: building it needs a C/C++ toolchain +
# cmake and pulls a multi-GB model at runtime, so it's off by default).
whisper-rs = { version = "0.14", optional = true }

# Phase 4 — Claude API client for AI polish/suggestions. Optional so the
# default build (and the test suite) stay offline and lean; the pure prompt
# building / response parsing / substance guard are tested without it.
# `cargo build --features llm` enables real network calls.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Desktop-only plugins (Verbatim is a desktop app). Auto-update via GitHub
# Releases + relaunch after install. Phase 9.2.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = []
# Enable real on-device transcription. `cargo build --features whisper`.
whisper = ["dep:whisper-rs"]
# Enable real Claude API calls (AI polish). `cargo build --features llm`.
llm = ["dep:reqwest"]
# Enable speaker diarization via the `verbatim-diarize` sidecar (Phase 4.2).
# No extra crate — just shells out — but gated so the default build stubs it.
diarize = []
