[package]
name = "sundayedit"
version = "0.7.0"
description = "SundayEdit — AI-assisted video captioning for desktop"
authors = ["Richard Fossland"]
edition = "2021"

[lib]
name = "sundayedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
# Shared Sunday Account (SSO): read the cross-app session this app shares with
# the rest of the suite (login happens in SundayRec). Distributed by git tag
# (see sunday-platform README) so each app builds standalone in CI — a path dep
# would break the single-repo checkout. For local sunday-auth co-dev, override
# with a `[patch]` in .cargo/config.toml.
sunday-auth = { git = "https://github.com/richardfossland/sunday-platform.git", tag = "v0.3.0" }
# Canonical cross-app wire contracts (Rust mirror of @sunday/contracts). We adopt
# its full `MediaHandoff` superset for deep-link parsing so Rec→Edit and Edit
# handoffs carry the complete field set; same git-tag distribution as sunday-auth.
sunday-contracts = { git = "https://github.com/richardfossland/sunday-platform.git", tag = "v0.4.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data layer
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase 1 — video import + waveform
sha2 = "0.10"      # content hashing for path-stability relink
hound = "3.5"      # WAV reader for waveform peak computation

# Phase 7 — find & replace (regex search in captions)
regex = "1"

# Phase 2.2 — API keys in the OS keychain (Keychain / Credential Manager),
# never plaintext. Native stores per platform; Linux is contributor-only.
keyring = { version = "3", features = ["apple-native", "windows-native"] }

# Phase 6.1 — DOCX export is an OOXML zip; we hand-build a minimal valid one.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Type generation for the frontend
ts-rs = { version = "12", features = ["serde-compat", "chrono-impl", "uuid-impl"] }
tauri-plugin-dialog = "2.7.1"

# Phase 2 — local Whisper (optional: building it needs a C/C++ toolchain +
# cmake and pulls a multi-GB model at runtime, so it's off by default).
# Declared per-target at the bottom of this file: Apple Silicon macOS gets the
# `metal` GPU backend (0.14's embedded Metal shader fails to compile on current
# macOS and CPU-only inference is far too slow for the product promise),
# Intel macOS + others CPU.

# HTTP client. Used by the Whisper model downloader (Phase 2.1/9.2) — which
# must ship in the default build, since a fresh install has to fetch a model
# before it can transcribe — and by the Claude API client (gated on `llm`).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Desktop-only plugins (SundayEdit is a desktop app). Auto-update via GitHub
# Releases + relaunch after install (Phase 9.2); Sunday-link deep-link import
# (Phase 8).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"

[dev-dependencies]
tempfile = "3"

[features]
default = []
# Enable real on-device transcription. `cargo build --features whisper`.
whisper = ["dep:whisper-rs"]
# Enable real Claude API calls (AI polish). `cargo build --features llm`.
# (reqwest itself is always built — the model downloader needs it.)
llm = []
# Enable speaker diarization via the `sundayedit-diarize` sidecar (Phase 4.2).
# No extra crate — just shells out — but gated so the default build stubs it.
diarize = []

# whisper.cpp with the Metal GPU backend (GGML_METAL_EMBED_LIBRARY — shader
# blob embedded, nothing extra to bundle). whisper-rs 0.16: 0.14's embedded
# Metal shader fails to compile on current macOS, and its abort-callback
# trampoline has a type-confusion bug we work around in local.rs.
#
# Apple Silicon only: upstream whisper.cpp supports/tests the Metal backend on
# Apple Silicon; on Intel Macs (Intel iGPU / AMD dGPU) it's an untested path,
# so the x86_64 slice of the universal build gets the CPU backend instead
# (baseline pinned in cmake/ggml-ci-portable.cmake for release builds).
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
whisper-rs = { version = "0.16", optional = true, features = ["metal"] }

# CPU-only on Intel macOS…
[target.'cfg(all(target_os = "macos", not(target_arch = "aarch64")))'.dependencies]
whisper-rs = { version = "0.16", optional = true }

# …and elsewhere (CUDA/Vulkan would need an SDK on the build host).
[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { version = "0.16", optional = true }
